copied card-layout of projects to cv page. fixed non-responsive background-color behind card-decks

--- a/css/cv.css
+++ b/css/cv.css
@@ -64,14 +64,10 @@ body {
 /* Increased height to 130% to ensure that on smaller screens the cards do not overflow into the next section. */
 
 .darkContent {
-    height: 130%;
-    width: 100%;
     background-color: #00171F;
 }
 
 .lightContent {
-    height: 130%;
-    width: 100%;
     background-color: #FFFFFF;
 }
 
